--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     />
 
     <title>Pires 👋</title>
-<!--
+    <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
+<!--git
 Deixo os créditos aqui para a página que baixei este template (Programar isso aqui me daria trabalho demais!)
 Reflux Template
 https://templatemo.com/tm-531-reflux
@@ -136,9 +137,7 @@ https://templatemo.com/tm-531-reflux
             <h2>Minhas skills</h2>
             <div class="line-dec"></div>
             <span
-              >Curabitur leo felis, rutrum vitae varius eu, malesuada a tortor.
-              Vestibulum congue leo et tellus aliquam, eu viverra nulla semper.
-              Nullam eu faucibus diam. Donec eget massa ante.</span
+              >Minhas principais habilidades estão abaixo.</span
             >
           </div>
           <div class="row">
