--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Pires 👋</title>
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
 <!--git
-Deixo os créditos aqui para a página que baixei este template (Programar isso aqui me daria trabalho demais!)
+Deixo os créditos aqui para a página que baixei este template (Programar isso aqui me daria trabalho demais!!)
 Reflux Template
 https://templatemo.com/tm-531-reflux
 -->
