--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ https://templatemo.com/tm-531-reflux
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
-                <li><a href="#section1">Sobre mim</a></li>
-                <li><a href="#section2">Minhas skills</a></li>
-                <li><a href="#section3">Meu trabalho</a></li>
+                <li><a href="#section1">Sobre Mim</a></li>
+                <li><a href="#section2">Minhas Skills</a></li>
+                <li><a href="#section3">Meu Trabalho</a></li>
                 <li><a href="#section4">Contato</a></li>
               </ul>
             </nav>
