--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Pires 👋</title>
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
 <!--git
-Deixo os créditos aqui para a página que baixei este template (Programar isso aqui me daria trabalho demais!!)
+Deixo os créditos aqui para a página que baixei este template (Programar isso aqui me daria trabalho demais!)
 Reflux Template
 https://templatemo.com/tm-531-reflux
 -->
@@ -46,9 +46,9 @@ https://templatemo.com/tm-531-reflux
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
-                <li><a href="#section1">Sobre Mim</a></li>
-                <li><a href="#section2">Minhas Skills</a></li>
-                <li><a href="#section3">Meu Trabalho</a></li>
+                <li><a href="#section1">Sobre mim</a></li>
+                <li><a href="#section2">Minhas skills</a></li>
+                <li><a href="#section3">Meu trabalho</a></li>
                 <li><a href="#section4">Contato</a></li>
               </ul>
             </nav>
@@ -86,7 +86,8 @@ https://templatemo.com/tm-531-reflux
             <h2>Sobre mim</h2>
             <div class="line-dec"></div>
             <span
-              >Olá!👋 <br> Sou o Pires. <br>Um profissional de de TI com 14 anos de experiência na área. Formado em Redes de Computadores e atualmente cursando Ciência da Computação, tenho uma paixão genuína por explorar e testar novos sistemas, descobrindo soluções que simplificam a vida de quem confia na tecnologia. Atuo na Done TI, uma empresa de tecnologia localizada em Porto Alegre (RS), onde desempenho um papel chave em projetos de insfraestrutura, segurança e inovação digital. Minha missão é transformar desafios tecnológicos em oportunidades de crescimento para os meus clientes. </span>
+              >Olá!👋 <br> Sou o Pires. <br>Um profissional de de TI com 14 anos de experiência na área. Formado em Redes de Computadores e atualmente cursando Ciência da Computação.
+              <br>Atuo na Done TI, uma empresa de tecnologia localizada em Porto Alegre (RS), onde desempenho um papel chave em projetos de insfraestrutura, segurança e inovação digital.</span>
           </div>
           <div class="left-image-post">
             <div class="row">
@@ -137,14 +138,14 @@ https://templatemo.com/tm-531-reflux
             <h2>Minhas skills</h2>
             <div class="line-dec"></div>
             <span
-              >Minhas principais habilidades estão abaixo.</span
+              >Tenho uma paixão genuína por explorar e testar novos sistemas, descobrindo soluções que simplificam a vida de quem confia na tecnologia. <br>Minhas principais habilidades estão abaixo.</span
             >
           </div>
           <div class="row">
             <div class="col-md-6">
               <div class="service-item">
                 <div class="first-service-icon service-icon"></div>
-                <h4>Administrador de Sistemas</h4>
+                <h4>Administração de Sistemas</h4>
                 <p>
                   Planejamento, instalação e manutenção de sistemas críticos para garantir eficiência e segurança nas operações da empresa.
                 </p>
@@ -162,7 +163,7 @@ https://templatemo.com/tm-531-reflux
             <div class="col-md-6">
               <div class="service-item">
                 <div class="third-service-icon service-icon"></div>
-                <h4>Manutenção de Servidores</h4>
+                <h4>Gestão de infraestrutura</h4>
                 <p>
                   Especialista em servidores Linux e Windows, oferecendo suporte completo e soluções de otimização para ambientes corporativos.
                 </p>
@@ -171,7 +172,7 @@ https://templatemo.com/tm-531-reflux
             <div class="col-md-6">
               <div class="service-item">
                 <div class="fourth-service-icon service-icon"></div>
-                <h4>Implementação de Sistemas</h4>
+                <h4>Deploy de Sistemas</h4>
                 <p>
                   Experiência em desenvolvimento e implementação de sistemas, focando sempre nas necessidades e objetivos do cliente.
                 </p>
@@ -186,9 +187,9 @@ https://templatemo.com/tm-531-reflux
           <div class="section-heading">
             <h2>Meu trabalho</h2>
             <div class="line-dec"></div>
-            <span
-              >Transformo desafios tecnológicos em soluções personalizadas e de alto impacto. Meu trabalho combina expertise técnica com uma abordagem voltada para segurança.</span
-            >
+            <span>
+              Minha missão é transformar desafios tecnológicos em oportunidades de crescimento para os meus clientes.
+            </span>
           </div>
           <div class="row">
             <div class="isotope-wrapper">
