--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@ https://templatemo.com/tm-531-reflux
             <h2>Sobre mim</h2>
             <div class="line-dec"></div>
             <span
-              >Olá!👋 <br> Sou o Pires. <br>Um profissional de de TI com 14 anos de experiência na área. Formado em Redes de Computadores e atualmente cursando Ciência da Computação.
-              <br>Atuo na Done TI, uma empresa de tecnologia localizada em Porto Alegre (RS), onde desempenho um papel chave em projetos de insfraestrutura, segurança e inovação digital.</span>
+              >Olá!👋 <br> Sou o Pires. <br>Um profissional de de TI com 14 anos de experiência na área. Formado em Redes de Computadores e atualmente cursando Ciência da Computação.</span>
           </div>
           <div class="left-image-post">
             <div class="row">
