--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ https://templatemo.com/tm-531-reflux
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
             <div class="image">
-              <a href="#"><img src="assets/images/Pires.jpg" alt="" /></a>
+              <a href="#"><img src="assets/images/Pires.jpg" alt="Pires" /></a>
             </div>
             <div class="author-content">
               <h4>● Pires ●</h4>
@@ -50,26 +50,23 @@ https://templatemo.com/tm-531-reflux
                 <li><a href="#section2">Minhas skills</a></li>
                 <li><a href="#section3">Meu trabalho</a></li>
                 <li><a href="#section4">Contato</a></li>
+                <li><a href="https://blog.epires.online/">Blog</a></li>
               </ul>
             </nav>
             <div class="social-network">
-              <ul class="soial-icons">
+              <ul class="social-icons">
                 <li>
-                  <a href="https://fb.com/templatemo"
-                    ><i class="fa fa-facebook"></i
+                  <a href="https://blog.epires.online"><i class="fa fa-heart"></i
                   ></a>
                 </li>
                 <li>
-                  <a href="https://instagram.com/epires.online/"><i class="fa fa-twitter"></i></a>
+                  <a href="https://instagram.com/epires.online/"><i class="fa fa-instagram"></i></a>
                 </li>
                 <li>
-                  <a href="https://linkedin.com/edpsk/"><i class="fa fa-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/edpsk/"><i class="fa fa-linkedin"></i></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa fa-dribbble"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-rss"></i></a>
+                  <a href="mailto:epires@proton.me"><i class="fa fa-rss"></i></a>
                 </li>
               </ul>
             </div>
