--- a/index.html
+++ b/index.html
@@ -50,23 +50,22 @@ https://templatemo.com/tm-531-reflux
                 <li><a href="#section2">Minhas skills</a></li>
                 <li><a href="#section3">Meu trabalho</a></li>
                 <li><a href="#section4">Contato</a></li>
-                <li><a href="#section5">Blog</a></li>
+                <li><a href="https://blog.epires.online/" target="_blank">Blog</a></li>
               </ul>
             </nav>
             <div class="social-network">
               <ul class="social-icons">
                 <li>
-                  <a href="https://blog.epires.online"><i class="fa fa-heart"></i
-                  ></a>
+                  <a href="https://blog.epires.online" target="_blank"><i class="fa fa-heart"></i></a>
                 </li>
                 <li>
-                  <a href="https://instagram.com/epires.online/"><i class="fa fa-instagram"></i></a>
+                  <a href="https://instagram.com/epires.online/" target="_blank"><i class="fa fa-instagram"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.linkedin.com/in/edpsk/"><i class="fa fa-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/edpsk/" target="_blank"><i class="fa fa-linkedin"></i></a>
                 </li>
                 <li>
-                  <a href="mailto:epires@proton.me"><i class="fa fa-rss"></i></a>
+                  <a href="mailto:epires@proton.me" target="_blank"><i class="fa fa-rss"></i></a>
                 </li>
               </ul>
             </div>
