--- a/index.html
+++ b/index.html
@@ -348,14 +348,16 @@ https://templatemo.com/tm-531-reflux
           <div class="section-heading">
             <h2>Vamos Conversar?</h2>
             <div class="line-dec"></div>
-            <span
-              >Estou sempre em busca de novos desafios e parcerias interessantes. Vamos discutir como posso agregar valor ao seu projeto?</span
-            >
+            <span>Estou sempre em busca de novos desafios e parcerias interessantes. Vamos discutir como posso agregar valor ao seu projeto?</span>
           </div>
           <div class="row">
             <div class="right-content">
               <div class="container">
-                <form id="contact" action="" method="post">
+                <form
+                  id="contact"
+                  action="https://formspree.io/f/xwpkbqbj"
+                  method="POST"
+                >
                   <div class="row">
                     <div class="col-md-6">
                       <fieldset>
@@ -365,7 +367,7 @@ https://templatemo.com/tm-531-reflux
                           class="form-control"
                           id="name"
                           placeholder="Seu nome..."
-                          required=""
+                          required
                         />
                       </fieldset>
                     </div>
@@ -373,11 +375,11 @@ https://templatemo.com/tm-531-reflux
                       <fieldset>
                         <input
                           name="email"
-                          type="text"
+                          type="email"
                           class="form-control"
                           id="email"
                           placeholder="Seu melhor email..."
-                          required=""
+                          required
                         />
                       </fieldset>
                     </div>
@@ -389,7 +391,7 @@ https://templatemo.com/tm-531-reflux
                           class="form-control"
                           id="subject"
                           placeholder="Assunto..."
-                          required=""
+                          required
                         />
                       </fieldset>
                     </div>
@@ -401,7 +403,7 @@ https://templatemo.com/tm-531-reflux
                           class="form-control"
                           id="message"
                           placeholder="Sua mensagem..."
-                          required=""
+                          required
                         ></textarea>
                       </fieldset>
                     </div>
@@ -419,6 +421,8 @@ https://templatemo.com/tm-531-reflux
           </div>
         </div>
       </section>
+      
+      
 
 <!--
       <section class="section latest-posts" data-section="section5">
