--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ https://templatemo.com/tm-531-reflux
             <h2>Sobre mim</h2>
             <div class="line-dec"></div>
             <span
-              >Olá!👋 <br> Sou o Pires. <br>Um profissional de de TI com 14 anos de experiência na área. Formado em Redes de Computadores e atualmente cursando Ciência da Computação.</span>
+              >Olá!👋 <br> Sou o Pires. <br>Profissional de de TI com 14 anos de experiência na área. Formado em Redes de Computadores e atualmente cursando Ciência da Computação.</span>
           </div>
           <div class="left-image-post">
             <div class="row">
