--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-6">
                 <div class="left-image">
-                  <img src="assets/images/left-image.jpg" alt="" />
+                  <img src="assets/images/post1.webp" alt="" />
                 </div>
               </div>
               <div class="col-md-6">
@@ -119,7 +119,7 @@ https://templatemo.com/tm-531-reflux
               </div>
               <div class="col-md-6">
                 <div class="right-image">
-                  <img src="assets/images/right-image.jpg" alt="" />
+                  <img src="assets/images/post2.webp" alt="" />
                 </div>
               </div>
             </div>
