update_images_webp

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ https://templatemo.com/tm-531-reflux
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
             <div class="image">
-              <a href="#"><img src="assets/images/Pires.jpg" alt="Pires" /></a>
+              <a href="#"><img src="assets/images/Pires.webp" alt="Pires" /></a>
             </div>
             <div class="author-content">
               <h4>● Pires ●</h4>
@@ -227,12 +227,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/compliance.jpg"
+                      src="assets/images/compliance.webp"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/compliance.jpg"
+                        href="assets/images/compliance.webp"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -246,12 +246,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="people">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/implementation.jpg"
+                      src="assets/images/implementation.webp"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/implementation.jpg"
+                        href="assets/images/implementation.webp"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -265,12 +265,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="animals">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/idash.jpg"
+                      src="assets/images/idash.webp"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/idash.jpg"
+                        href="assets/images/idash.webp"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -284,12 +284,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="people">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/automation.jpg"
+                      src="assets/images/automation.webp"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/automation.jpg"
+                        href="assets/images/automation.webp"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -303,12 +303,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/risk.jpg"
+                      src="assets/images/risk.webp"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/risk.jpg"
+                        href="assets/images/risk.webp"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -322,12 +322,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="animals">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/realtime_data.jpg"
+                      src="assets/images/realtime_data.webp"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/realtime_data.jpg"
+                        href="assets/images/realtime_data.webp"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
