--- a/index.html
+++ b/index.html
@@ -2,17 +2,12 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrin8
-    <meta name="description" content="Meu site pessoal para divulgar principalmente o meu blog." />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="Site pessoal para divulgação do meu trabalho e blog. Analista de segurança da informação e infraestrutura." />
+    <meta name="keywords" content="TI, sysadmin, administração de sistemas, infraestrutura, segurança, treinamentos">
     <meta name="author" content="Sysadmin Pires" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
-      rel="stylesheet"
-    />
-
-    <title>Pires 👋</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
+    <title>Pires 👋 - Sysadmin e Especialista em TI</title>
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
 <!--git
 Deixo os créditos aqui para a página que baixei este template (Programar isso aqui me daria trabalho demais!)
@@ -88,7 +83,7 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-6">
                 <div class="left-image">
-                  <img src="assets/images/post1.webp" alt="" />
+                  <img src="assets/images/post1.webp" alt="Imagem sobre meus 14 anos de experiência em TI" />
                 </div>
               </div>
               <div class="col-md-6">
