--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ https://templatemo.com/tm-531-reflux
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
             <div class="image">
-              <a href="#"><img src="assets/images/Pires.webp" alt="Pires" /></a>
+              <a href="#"><img src="assets/images/Pires.webp" alt="Imagem de perfil" /></a>
             </div>
             <div class="author-content">
               <h4>● Pires ●</h4>
@@ -114,7 +114,7 @@ https://templatemo.com/tm-531-reflux
               </div>
               <div class="col-md-6">
                 <div class="right-image">
-                  <img src="assets/images/post2.webp" alt="" />
+                  <img src="assets/images/post2.webp" alt="Imagem mostrando o post sobre o futuro da TI" />
                 </div>
               </div>
             </div>
@@ -221,10 +221,7 @@ https://templatemo.com/tm-531-reflux
               <div class="isotope-box">
                 <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
-                    <img
-                      src="assets/images/compliance.webp"
-                      alt="sq-sample26"
-                    />
+                    <img src="assets/images/compliance.webp" alt="Imagem demonstrando compliance" />
                     <figcaption>
                       <a
                         href="assets/images/compliance.webp"
@@ -241,9 +238,7 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="people">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/implementation.webp"
-                      alt="sq-sample26"
-                    />
+                      src="assets/images/implementation.webp" alt="Imagem demonstrando implementação" />
                     <figcaption>
                       <a
                         href="assets/images/implementation.webp"
@@ -261,7 +256,7 @@ https://templatemo.com/tm-531-reflux
                   <figure class="snip1321">
                     <img
                       src="assets/images/idash.webp"
-                      alt="sq-sample26"
+                      alt="Imagem mostrando Dashboards"
                     />
                     <figcaption>
                       <a
@@ -278,10 +273,7 @@ https://templatemo.com/tm-531-reflux
 
                 <div class="isotope-item" data-type="people">
                   <figure class="snip1321">
-                    <img
-                      src="assets/images/automation.webp"
-                      alt="sq-sample26"
-                    />
+                    <img src="assets/images/automation.webp" alt="Imagem mostrando automação de processos" />
                     <figcaption>
                       <a
                         href="assets/images/automation.webp"
@@ -299,7 +291,7 @@ https://templatemo.com/tm-531-reflux
                   <figure class="snip1321">
                     <img
                       src="assets/images/risk.webp"
-                      alt="sq-sample26"
+                      alt="Imagem demonstrando análise de riscos"
                     />
                     <figcaption>
                       <a
@@ -318,7 +310,7 @@ https://templatemo.com/tm-531-reflux
                   <figure class="snip1321">
                     <img
                       src="assets/images/realtime_data.webp"
-                      alt="sq-sample26"
+                      alt="Imagem demonstrando dados em tempo real"
                     />
                     <figcaption>
                       <a
