--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Site pessoal para divulgação do meu trabalho e blog. Analista de segurança da informação e infraestrutura." />
     <meta name="keywords" content="TI, sysadmin, administração de sistemas, infraestrutura, segurança, treinamentos">
+    <meta name="google-site-verification" content="aHi_yk1FgqOOZHwbFf0HXbgnZEnJcu4-7msiYIn3zOs" />
     <meta name="author" content="Sysadmin Pires" />
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
     <title>Pires 👋 - Sysadmin e Especialista em TI</title>
