--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@ https://templatemo.com/tm-531-reflux
     <link rel="stylesheet" href="assets/css/owl.css" />
     <link rel="stylesheet" href="assets/css/lightbox.css" />
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGE8GPL23C"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DGE8GPL23C');
+</script>
 
   <body>
     <div id="page-wraper">
