--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Site pessoal para divulgação do meu trabalho e blog. Analista de segurança da informação e infraestrutura." />
+    <meta name="description" content="Analista de Infraestrutura de TI ⦁ Especialista em Cybersecurity." />
     <meta name="keywords" content="TI, sysadmin, administração de sistemas, infraestrutura, segurança, treinamentos">
     <meta name="google-site-verification" content="aHi_yk1FgqOOZHwbFf0HXbgnZEnJcu4-7msiYIn3zOs" />
     <meta name="author" content="Sysadmin Pires" />
@@ -49,15 +49,17 @@ https://templatemo.com/tm-531-reflux
               <h4>● Pires ●</h4>
               <span>Sysadmin</span>
             </div>
+
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
                 <li><a href="#section1">Sobre mim</a></li>
                 <li><a href="#section2">Minhas skills</a></li>
                 <li><a href="#section3">Meu trabalho</a></li>
                 <li><a href="#section4">Contato</a></li>
-                <li><a href="#section5" target="_blank">Blog</a></li>
+                <li><a-1 href="#section5" target="_blank">Blog</a-1></li>
               </ul>
             </nav>
+            
             <div class="social-network">
               <ul class="social-icons">
                 <li>
