update_rich_preview

--- a/index.html
+++ b/index.html
@@ -1,29 +1,39 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Analista de Infraestrutura de TI ⦁ Especialista em Cybersecurity." />
-    <meta name="keywords" content="TI, sysadmin, administração de sistemas, infraestrutura, segurança, treinamentos">
-    <meta name="google-site-verification" content="aHi_yk1FgqOOZHwbFf0HXbgnZEnJcu4-7msiYIn3zOs" />
-    <meta name="author" content="Sysadmin Pires" />
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
-    <title>Pires 👋 - Sysadmin e Especialista em TI</title>
-    <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
-<!--git
-Deixo os créditos aqui para a página que baixei este template (Programar isso aqui me daria trabalho demais!)
-Reflux Template
-https://templatemo.com/tm-531-reflux
--->
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="Analista de Infraestrutura de TI ⦁ Especialista em Cybersecurity." />
+  <meta name="keywords" content="TI, sysadmin, administração de sistemas, infraestrutura, segurança, treinamentos">
+  <meta name="google-site-verification" content="aHi_yk1FgqOOZHwbFf0HXbgnZEnJcu4-7msiYIn3zOs" />
+  <meta name="author" content="Sysadmin Pires" />
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
+  <title>Pires 👋 - Sysadmin e Especialista em TI</title>
+  <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
 
-    <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css" />
-    <link rel="stylesheet" href="assets/css/templatemo-style.css" />
-    <link rel="stylesheet" href="assets/css/owl.css" />
-    <link rel="stylesheet" href="assets/css/lightbox.css" />
-  </head>
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Pires 👋 - Sysadmin e Especialista em TI" />
+  <meta property="og:description" content="Analista de Infraestrutura de TI ⦁ Especialista em Cybersecurity." />
+  <meta property="og:image" content="https://seusite.com/assets/images/og-image.jpg" />
+  <meta property="og:url" content="https://seusite.com" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="pt_BR" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Pires 👋 - Sysadmin e Especialista em TI" />
+  <meta name="twitter:description" content="Analista de Infraestrutura de TI ⦁ Especialista em Cybersecurity." />
+  <meta name="twitter:image" content="https://seusite.com/assets/images/og-image.jpg" />
+  <meta name="twitter:site" content="@seutwitter" />
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+
+  <!-- Additional CSS Files -->
+  <link rel="stylesheet" href="assets/css/fontawesome.css" />
+  <link rel="stylesheet" href="assets/css/templatemo-style.css" />
+  <link rel="stylesheet" href="assets/css/owl.css" />
+  <link rel="stylesheet" href="assets/css/lightbox.css" />
+</head>
+
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGE8GPL23C"></script>
 <script>
