--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <link rel="stylesheet" href="assets/css/templatemo-style.css" />
   <link rel="stylesheet" href="assets/css/owl.css" />
   <link rel="stylesheet" href="assets/css/lightbox.css" />
+  <link rel="stylesheet" href="assets/css/cookies.css">
 </head>
 
   <!-- Google tag (gtag.js) -->
@@ -45,6 +46,12 @@
 </script>
 
   <body>
+    <div id="cookieConsent"> 
+      <p>Este site utiliza cookies para melhorar a sua experiência. Ao continuar navegando, você concorda com nossa <a href="politica-de-cookies.html">política de cookies</a>.
+      </p> <button id="acceptCookies">Aceitar</button>
+    </div> 
+    <script src="vendor/jquery/cookies.js"></script>
+    
     <div id="page-wraper">
       <!-- Sidebar Menu -->
       <div class="responsive-nav">
@@ -66,7 +73,7 @@
                 <li><a href="#section2">Minhas skills</a></li>
                 <li><a href="#section3">Meu trabalho</a></li>
                 <li><a href="#section4">Contato</a></li>
-                <li><a-1 href="#section5" target="_blank">Blog</a-1></li>
+                <!--<li><a-1 href="#section5" target="_blank">Blog</a-1></li> -->
               </ul>
             </nav>
             
@@ -99,7 +106,7 @@
             <h2>Sobre mim</h2>
             <div class="line-dec"></div>
             <span
-              >Olá!👋 <br> Sou o Pires. <br>Profissional de de TI com 14 anos de experiência na área. Formado em Redes de Computadores e atualmente cursando Ciência da Computação.</span>
+              >Olá!👋 <br> Sou o Pires. <br>Profissional de TI com 14 anos de experiência na área. Especializado em Redes de Computadores e Cybersegurança.</span>
           </div>
           <div class="left-image-post">
             <div class="row">
