--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="social-network">
               <ul class="social-icons">
                 <li>
-                  <a href="https://blog.epires.online" target="_blank"><i class="fa fa-heart"></i></a>
+                  <a href="https://blog.epires.online/" target="_blank"><i class="fa fa-heart"></i></a>
                 </li>
                 <li>
                   <a href="https://instagram.com/epires.online/" target="_blank"><i class="fa fa-instagram"></i></a>
@@ -106,7 +106,7 @@
             <h2>Sobre mim</h2>
             <div class="line-dec"></div>
             <span
-              >Olá!👋 <br> Sou o Pires. <br>Profissional de TI com 14 anos de experiência na área. Especializado em Redes de Computadores e Cybersegurança.</span>
+              >Olá!👋 <br> Meu nome é Eduardo Pires. <br>Profissional de TI com 14 anos de experiência na área. Especializado em Redes de Computadores, sistema de código aberto e Cybersegurança.</span>
           </div>
           <div class="left-image-post">
             <div class="row">
