--- a/politica-de-cookies.html
+++ b/politica-de-cookies.html
@@ -1,46 +1,92 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Política de Cookies</title>
-    <link rel="stylesheet" href="assets/css/policy.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="Política de Cookies - Pires Online" />
+    <title>Política de Cookies - Pires Online</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/fontawesome.css" />
+    <link rel="stylesheet" href="assets/css/templatemo-style.css" />
 </head>
 <body>
-    <header>
-        <h1>Política de Cookies</h1>
-    </header>
-    <main>
-        <section>
-            <h2>O que são cookies?</h2>
-            <p>Os cookies são pequenos arquivos de texto que são armazenados no seu dispositivo quando você visita um site. Eles ajudam a melhorar a experiência do usuário, armazenando informações sobre suas preferências e navegação.</p>
+    <div id="page-wraper">
+        <div class="responsive-nav">
+            <i class="fa fa-bars" id="menu-toggle"></i>
+            <div id="menu" class="menu">
+                <i class="fa fa-times" id="menu-close"></i>
+                <div class="container">
+                    <div class="image">
+                        <a href="index.html"><img src="assets/images/Pires.webp" alt="Imagem de perfil" /></a>
+                    </div>
+                    <div class="author-content">
+                        <h4>● Pires ●</h4>
+                        <span>Sysadmin</span>
+                    </div>
+                    <nav class="main-nav" role="navigation">
+                        <ul class="main-menu">
+                            <li><a href="index.html">Voltar ao site</a></li>
+                        </ul>
+                    </nav>
+                    <div class="social-network">
+                        <ul class="social-icons">
+                            <li><a href="https://blog.epires.online/" target="_blank"><i class="fa fa-heart"></i></a></li>
+                            <li><a href="https://instagram.com/epires.online/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/edpsk/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="mailto:epires@proton.me" target="_blank"><i class="fa fa-rss"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="copyright-text">
+                        <p>Copyright 2024 - Pires Online</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <section class="section about-me">
+            <div class="container">
+                <div class="section-heading">
+                    <h2>Política de Cookies</h2>
+                    <div class="line-dec"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="content-box">
+                            <h4>O que são cookies?</h4>
+                            <p>Cookies são pequenos arquivos de texto que são armazenados no seu computador ou dispositivo móvel quando você visita nosso site. Eles permitem que o site memorize suas ações e preferências por um determinado período, para que você não precise inserir essas informações novamente sempre que retornar ao site ou navegar de uma página para outra.</p>
+
+                            <h4>Como utilizamos os cookies?</h4>
+                            <p>Utilizamos cookies pelos seguintes motivos:</p>
+                            <ul>
+                                <li>Cookies essenciais: Necessários para o funcionamento básico do site</li>
+                                <li>Cookies de análise: Para melhorar o desempenho do site através da análise do comportamento dos usuários</li>
+                                <li>Cookies de funcionalidade: Para lembrar suas preferências e melhorar sua experiência</li>
+                            </ul>
+
+                            <h4>Cookies específicos que utilizamos</h4>
+                            <p>Google Analytics: Utilizamos para entender como os visitantes interagem com o site.</p>
+
+                            <h4>Seus direitos</h4>
+                            <p>Você pode optar por aceitar ou recusar cookies. A maioria dos navegadores aceita cookies automaticamente, mas você pode modificar suas configurações de navegador para recusar cookies se preferir. No entanto, isso pode impedir que você aproveite todos os recursos interativos do nosso site.</p>
+
+                            <h4>Como controlar os cookies</h4>
+                            <p>Você pode controlar e/ou excluir cookies conforme desejar. Para saber mais sobre como fazer isso, visite aboutcookies.org. Você pode excluir todos os cookies já existentes em seu computador e configurar a maioria dos navegadores para impedir que eles sejam colocados.</p>
+
+                            <h4>Atualizações na política de cookies</h4>
+                            <p>Podemos atualizar esta política de cookies periodicamente. Recomendamos que você verifique esta página regularmente para se manter informado sobre quaisquer alterações.</p>
+
+                            <h4>Contato</h4>
+                            <p>Se você tiver dúvidas sobre nossa política de cookies, entre em contato através do email: epires@proton.me</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-        <section>
-            <h2>Como usamos os cookies?</h2>
-            <p>Utilizamos cookies para várias finalidades, incluindo:</p>
-            <ul>
-                <li>Melhorar a funcionalidade do site.</li>
-                <li>Armazenar suas preferências e configurações.</li>
-                <li>Coletar dados analíticos para entender como você utiliza nosso site.</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Tipos de cookies que utilizamos</h2>
-            <p>Nosso site utiliza os seguintes tipos de cookies:</p>
-            <ul>
-                <li><strong>Cookies essenciais:</strong> Necessários para o funcionamento do site.</li>
-                <li><strong>Cookies de desempenho:</strong> Coletam informações sobre como os visitantes utilizam o site.</li>
-                <li><strong>Cookies de funcionalidade:</strong> Permitem que o site lembre das suas escolhas.</li>
-                <li><strong>Cookies de publicidade:</strong> Utilizados para fornecer anúncios relevantes para você.</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Como gerenciar cookies?</h2>
-            <p>Você pode controlar e/ou excluir cookies como desejar. Para mais informações sobre como gerenciar cookies, visite <a href="https://www.allaboutcookies.org/manage-cookies/">All About Cookies</a>.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Seu Site. Todos os direitos reservados.</p>
-    </footer>
+    </div>
+
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/custom.js"></script>
 </body>
 </html>
