--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
       </div>
 
-      <section class="section about-me" data-section="section1">
+      <!-- <section class="section about-me" data-section="section1">
         <div class="container">
           <div class="section-heading">
             <h2>Sobre mim</h2>
@@ -115,6 +115,7 @@
                   <img src="assets/images/post1.webp" alt="Imagem sobre meus 14 anos de experiência em TI" />
                 </div>
               </div>
+            
               <div class="col-md-6">
                 <div class="right-text">
                   <h4>O que aprendi ao longo dos meus 14 anos em TI</h4>
@@ -149,7 +150,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> --!>
 
       <section class="section my-services" data-section="section2">
         <div class="container">
