add-whatsapp-link

--- a/contato.html
+++ b/contato.html
@@ -83,8 +83,10 @@
                                 <a href="https://instagram.com/epires.online/" target="_blank">Instagram</a>
                                 <a href="https://www.linkedin.com/in/edpsk/" target="_blank">LinkedIn</a>
                                 <a href="mailto:epires@proton.me">Email</a>
+                                <a href="https://wa.me/+5551995649904?text=Pires" target="_blank" style="background-color: #25d366; border-color: #128c7e;">WhatsApp</a>
                             </div>
                         </div>
+                        
                     </div>
                     <div class="col-md-6">
                         <div class="content-box text-center">
