--- a/qrcode.html
+++ b/qrcode.html
@@ -2,10 +2,13 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de QR Code</title>
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Gerador de QR Code - Pires Online">
+    <title>Gerador de QR Code - Pires Online</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/fontawesome.css">
+    <link rel="stylesheet" href="assets/css/templatemo-style.css">
     <style>
         #toast {
             position: fixed;
@@ -19,25 +22,62 @@
         }
     </style>
 </head>
-<body class="bg-light d-flex justify-content-center align-items-center vh-100">
-    <div class="container text-center bg-white p-4 rounded shadow">
-        <h2 class="mb-3">Gerador de QR Code</h2>
-        <div class="mb-3 d-flex">
-            <input type="text" id="texto" class="form-control me-2" placeholder="Digite o texto ou link" />
-            <button class="btn btn-primary" onclick="gerarQRCode()">Gerar</button>
+<body>
+    <div id="page-wraper">
+        <div class="responsive-nav">
+            <i class="fa fa-bars" id="menu-toggle"></i>
+            <div id="menu" class="menu">
+                <i class="fa fa-times" id="menu-close"></i>
+                <div class="container">
+                    <div class="image">
+                        <a href="index.html"><img src="assets/images/Pires.webp" alt="Imagem de perfil" /></a>
+                    </div>
+                    <div class="author-content">
+                        <h4>● Pires ●</h4>
+                        <span>Sysadmin</span>
+                    </div>
+                    <nav class="main-nav" role="navigation">
+                        <ul class="main-menu">
+                            <li><a href="index.html">Voltar ao site</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
-        <div id="qrcode" class="p-3 border d-inline-block bg-white"></div>
-        <div id="link-container" class="mt-3 d-none">
-            <input type="text" id="qrcode-link" class="form-control mb-2" readonly>
-            <button class="btn btn-secondary" onclick="copiarLink()">Copiar Link</button>
-        </div>
-        <div id="download-container" class="mt-3 d-none">
-            <button class="btn btn-success" onclick="baixarQRCode()">Baixar QR Code</button>
-        </div>
+
+        <section class="section about-me">
+            <div class="container">
+                <div class="section-heading">
+                    <h2>Gerador de QR Code</h2>
+                    <div class="line-dec"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8 mx-auto">
+                        <div class="content-box p-4 bg-white shadow rounded text-center">
+                            <div class="mb-3 d-flex">
+                                <input type="text" id="texto" class="form-control me-2" placeholder="Digite o texto ou link" />
+                                <button class="btn btn-primary" onclick="gerarQRCode()">Gerar</button>
+                            </div>
+                            <div id="qrcode" class="p-3 border d-inline-block bg-white"></div>
+                            <div id="link-container" class="mt-3 d-none">
+                                <input type="text" id="qrcode-link" class="form-control mb-2" readonly>
+                                <button class="btn btn-secondary" onclick="copiarLink()">Copiar Link</button>
+                            </div>
+                            <div id="download-container" class="mt-3 d-none">
+                                <button class="btn btn-success" onclick="baixarQRCode()">Baixar QR Code</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
-    
+
     <div id="toast">Link copiado!</div>
     
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script>
         function gerarQRCode() {
             let texto = document.getElementById("texto").value;
