Limpa site antigo e envia nova versão

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="description" content="Analista de Infraestrutura de TI ⦁ Especialista em Cybersecurity." />
   <meta name="keywords" content="TI, sysadmin, administração de sistemas, infraestrutura, segurança, treinamentos">
   <meta name="google-site-verification" content="aHi_yk1FgqOOZHwbFf0HXbgnZEnJcu4-7msiYIn3zOs" />
-  <meta name="author" content="Sysadmin Pires" />
+  <meta name="author" content="SysAdmin Pires" />
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
   <title>Pires 👋 - Sysadmin e Especialista em TI</title>
   <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
